@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST.pre,v 1.1 2001/11/01 02:24:59 zuntum Exp $
-bin/grail
