@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2005/02/24 14:08:31 wiz Exp $
-
-SHA1 (grail-0.6.tgz) = d32e0d79cb0017d170734b49a11118beca24d150
-RMD160 (grail-0.6.tgz) = fd37d2d4a35714625d8bd7561adb96a20b349613
-Size (grail-0.6.tgz) = 385126 bytes
